skip sales order

--- a/src/app/app/basic-call-procedure/components/hc-retailer-sales-order.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-retailer-sales-order.component.html
@@ -198,7 +198,7 @@
 
 
     <div class='double-divider'>
-        <div class='button' id='skip' (click)='skipSalesOrderModalComponent()'>
+        <div class='button' id='skip' (click)='skipSalesOrder()'>
             <div class='button-identifier'>SKIP</div>
         </div>
     </div>
