--- a/src/app/app/basic-call-procedure/components/retailer-sales-order.component.html
+++ b/src/app/app/basic-call-procedure/components/retailer-sales-order.component.html
@@ -107,7 +107,7 @@
         </div>
     </div>
     <div class='double-divider'>
-        <div class='button' id='skip' (click)='skipSalesOrderModalComponent()'>
+        <div class='button' id='skip' (click)='skipSalesOrder()'>
             <div class='button-identifier'>SKIP</div>
         </div>
     </div>
