--- a/src/app/app/basic-call-procedure/components/hc-bcp-add-retailer-route.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-bcp-add-retailer-route.component.html
@@ -1,4 +1,12 @@
 <div class="container-body">
+
+    <div class='filter-container'>
+        <div class='filter-input input'>
+            <div class='icon'></div>
+            <input type='text' id='RetailerSearchBox' placeholder='Search' />
+        </div>  
+    </div>
+
     <div class="item-container">
         <div class='container'>
             <div class='cell width-20'>
@@ -65,13 +73,10 @@
         </div>
     </div>
 
-
-    <div class='item-container'>
-        <div class="container">
-
-            <div class='button' id='add-retailer-route-ok' (click)="gotoBasicCallProcedure()">
-                <div class='button-identifier'>OK</div>
-            </div>
+    <div class="no-divider">
+        <div class='button-bottom' id='add-retailer-route-ok' (click)="gotoBasicCallProcedure()">
+            <div class='button-identifier'>OK</div>
         </div>
     </div>
+
 </div>      
