test datetimepicker UI

--- a/src/app/app/remittance/components/add-remittance.component.html
+++ b/src/app/app/remittance/components/add-remittance.component.html
@@ -54,6 +54,50 @@
                     </div></div>
                 </div>
             </div>
+
+
+            <div class="container">
+                <div class="cell padding-top-2 padding-bottom-2">
+                    <div class="container"><div class="cell width-100 padding-left-5 padding-right-5">
+                        <input type="date" value ="1996-12-19T16:39:57-08:00" />
+                    </div></div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="cell padding-top-2 padding-bottom-2">
+                    <div class="container"><div class="cell width-100 padding-left-5 padding-right-5">
+                        <input type="time" value ="1996-12-19T16:39:57-08:00" />
+                    </div></div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="cell padding-top-2 padding-bottom-2">
+                    <div class="container"><div class="cell width-100 padding-left-5 padding-right-5">
+                        <input type="datetime-local" value="2000-01-01T00:00:00" />
+                    </div></div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="cell padding-top-2 padding-bottom-2">
+                    <div class="container"><div class="cell width-100 padding-left-5 padding-right-5">
+                        <input type="month" value ="1996-12-19T16:39:57-08:00" />
+                    </div></div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="cell padding-top-2 padding-bottom-2">
+                    <div class="container"><div class="cell width-100 padding-left-5 padding-right-5">
+                            <input (click)="aaa()" type="text"/>
+                    </div></div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="cell padding-top-2 padding-bottom-2">
+                    <div class="container"><div class="cell width-100 padding-left-5 padding-right-5">
+                            <input (click)="bbb()" type="text"/>
+                    </div></div>
+                </div>
+            </div>
         </div>
 
         <div *ngIf="vSelectedRemittance === 'Trade Money'">
