--- a/src/app/scss/_login.scss
+++ b/src/app/scss/_login.scss
@@ -80,7 +80,7 @@ $container-login-height: 100%;
 				margin-bottom: 1.5vw;
 				background-color: rgba(199, 195, 184, 0.5);
 				outline: 0;
-				color : #000;
+				color : #FFF;
 				text-align: center;
 				font-style: italic;
 			}
