add page confirm collection and pop up skip collection

--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -597,6 +597,7 @@ LIST VIEW - TEXT
                 &.input-peso {
                     text-align: right;
                     font-size: $content-normal;
+                    //font-size: 4vw;
                     padding: 0% 11% 0% 0%;
                     @media screen and (-webkit-min-device-pixel-ratio: 0) {
                         background-image: url(#{$icon-peso});
