--- a/src/app/app/basic-call-procedure/components/hc-bcp-collection.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-bcp-collection.component.html
@@ -51,7 +51,7 @@
 				</div>
 				<div class="cell">
 					<div class="container"><div class="cell width-45 align-right grey" id="order-id">12345</div></div>
-					<div class="container"><div class="cell width-45 align-right grey" id="outstd-date">05/19/2016</div></div>
+					<div class="container"><div class="cell width-45 align-right grey" id="outstd-date">2016-01-16  08:17</div></div>
 					<div class="container"><div class="cell width-45 align-right grey" id="outstd-balance-amount">1,000 ₱</div></div>
 				</div>
 	           	<div class="cell width-10"></div>
