unserved order - skip sales order (span)

--- a/src/app/app/basic-call-procedure/components/add-unserved-order.component.html
+++ b/src/app/app/basic-call-procedure/components/add-unserved-order.component.html
@@ -10,8 +10,6 @@
         </div>
     </div>
 
-    ADD UNSERVED ORDER
-
     <div class="item-container">
         <div class="container">
             <div class='cell'>
@@ -21,6 +19,25 @@
                 <div class='container'><div class='cell width-40 align-right'>2016-04-21 13:30</div></div>
             </div>
                 <div class='cell width-10'></div>
+        </div>
+    </div>
+    <div class="item-container">
+        <div class="container">
+            <div class="cell filter-dropdown width-30 padding-top-1 padding-bottom-1 padding-right-5 padding-left-5">
+                <select name="value_segment_filter" class="width-100">
+                    <option value="">Select</option>
+                </select>
+            </div>
+        </div>
+        <div class='container'>
+                <div class='cell'>
+                    <div class='container'><div class='cell width-100 padding-left-5'>Remarks<span class='vivid-pink'>*</span></div></div>
+                </div>
+        </div>
+        <div class='container'>
+            <div class='cell width-100 padding-left-5 padding-right-5'>
+                <textarea name="textarea" rows="10" cols="50"></textarea>
+            </div>
         </div>
     </div>
     <div class='no-divider' id='add'>
