--- a/src/app/app/stock-return/components/confirm-stock-return.component.html
+++ b/src/app/app/stock-return/components/confirm-stock-return.component.html
@@ -57,10 +57,7 @@
             <div class='cell'>
 	                <div class='container'>
 	            		<div class='cell'>
-	               			 <div class='container'><div class='cell width-100 padding-left-5'>Remarks</div></div>
-	            		</div>
-	            		<div class='cell'>
-	                		<div class='container'><div class='cell width-02 vivid-pink bold'>*</div></div>
+	               			 <div class='container'><div class='cell width-100 padding-left-5'>Remarks<span class='vivid-pink'>*</span></div></div>
 	            		</div>
 	        		</div>
 	        		<div class='container'>
@@ -70,10 +67,7 @@
 	        		</div>
 	        		<div class='container'>
 	            		<div class='cell'>
-	               			 <div class='container'><div class='cell width-100 padding-left-5'>Acknowledgement</div></div>
-	            		</div>
-	            		<div class='cell'>
-	                		<div class='container'><div class='cell width-02 vivid-pink bold'>*</div></div>
+	               			 <div class='container'><div class='cell width-100 padding-left-5'>Acknowledgement<span class='vivid-pink'>*</span></div></div>
 	            		</div>
 	        		</div>
 	        		<div class='container'>
