Add Skip Collection Page

--- a/src/app/app/basic-call-procedure/components/hc-bcp-collection.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-bcp-collection.component.html
@@ -113,7 +113,7 @@
         </div>
         <div class="container">
         	<div class="double-divider">
-        		<div class= "button" (click)="gotoSkipCollection()">
+        		<div class= "button" (click)="skipCollection()">
         			<div class="button-identifier" id="skip-collection">SKIP</div>
         		</div>
         	</div>
