--- a/src/app/app/basic-call-procedure/components/add-unserved-order.component.html
+++ b/src/app/app/basic-call-procedure/components/add-unserved-order.component.html
@@ -16,23 +16,32 @@
                 <div class='container'><div class='cell width-50 padding-left-5 green'>Order No. 12345678</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell width-40 align-right'>2016-04-21 13:30</div></div>
+                <div class='container'><div class='cell width-40 padding-right-5 align-right'>2016-04-21 13:30</div></div>
             </div>
-                <div class='cell width-10'></div>
         </div>
     </div>
     <div class="item-container">
         <div class="container">
-            <div class="cell filter-dropdown width-30 padding-top-1 padding-bottom-1 padding-right-5 padding-left-5">
-                <select name="value_segment_filter" class="width-100">
-                    <option value="">Select</option>
-                </select>
+            <div class='cell'>
+                <div class='container'><div class='cell width-30 align-center'>SKU</div></div>
+                <div class='container'><div class='cell width-30 padding-left-5 padding-right-5'>
+                    <select name="SKU" class="width-100">
+                        <option value="">Select</option>
+                    </select>
+                </div></div>
+            </div>
+            <div class='cell'>
+                <div class='container'><div class='cell width-100 align-center'>Quantity</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 padding-right-5'>
+                    <input class="width-100" type ="text" id ="quantity" type="number" pattern="[0-9]+([,\.][0-9]+)?"/>
+                </div></div>
             </div>
         </div>
+
         <div class='container'>
-                <div class='cell'>
-                    <div class='container'><div class='cell width-100 padding-left-5'>Remarks<span class='vivid-pink'>*</span></div></div>
-                </div>
+            <div class='cell'>
+                <div class='container'><div class='cell width-100 padding-left-5'>Remarks<span class='vivid-pink'>*</span></div></div>
+            </div>
         </div>
         <div class='container'>
             <div class='cell width-100 padding-left-5 padding-right-5'>
