--- a/src/app/app/my-transaction/components/inventory.component.html
+++ b/src/app/app/my-transaction/components/inventory.component.html
@@ -82,7 +82,7 @@
 
 
 	<div *ngIf="vLoadShow">
-		<div>
+		<div>body
 			<div class="item-container" (click)="subLoadMenuShow(i)">
 				<div class="container">
 					<div class='cell width-10 inventory-load'></div>
