--- a/src/app/app/basic-call-procedure/components/basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/basic-call-procedure.component.html
@@ -8,26 +8,26 @@
 
 <div class="container-body">
     <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'In Progress'})"> -->
-    <div class="item-container" *ngFor="#each of getFilteredDate()" (click)="gotoAnotherPage(each)">
+    <div class="item-container" *ngFor="#each of getFilteredDate()" (click)="gotoAnotherPage(each.getroute)">
         <div class="container">
-            <div class='cell width-10 padding-left-5'><div class="sequence green">1</div></div>
+            <div class='cell width-10 padding-left-5'><div class="sequence green">{{each.getroute.sequence_no}}</div></div>
             <div class='cell'>
-                <div class='container'><div class='cell width-40 padding-left-5'>{{each.storeName}}</div></div>
-                <div class='container'><div class='cell width-40 padding-left-5 italic'>{{each.retailerMinDetails}}</div></div>
-                <div class='container'><div class='cell width-40 padding-left-5'>Account receivables ({{each.numberofAgingSELFTransaction}}/{{each.numberofSELFTransaction}})</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5'>{{each.getroute.store_name}}</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5 italic'>{{each.getroute.retailer_min}}</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5'>Account receivables ({{each.getroute.number_of_aging_self_transaction}}/{{each.getroute.number_of_aging_self_transaction}})</div></div>
             </div>
             <div class='cell'>
-                 <div *ngIf="each.call_status === 'Visited'">
-                    <div class='container'><div class='cell width-40 align-right bold dark-sea-green'>Visited</div></div>
+                 <div *ngIf="each.getroute.call_status === 'Not Visited'">
+                    <div class='container'><div class='cell width-40 align-right bold '>{{each.getroute.call_status}}</div></div>
                 </div>
-                <div *ngIf="each.call_status === 'In Progress'">
-                    <div class='container'><div class='cell width-40 align-right bold grey'>Visited/NotVisited</div></div>
+                <div *ngIf="each.getroute.call_status === 'In Progress'">
+                    <div class='container'><div class='cell width-40 align-right bold'>{{each.getroute.call_status}}</div></div>
                 </div>
-                <div *ngIf="each.call_status === 'Visited'">
-                    <div class='container'><div class='cell width-40 align-right bold vivid-pink'>Visited/NotVisited</div></div>
+                <div *ngIf="each.getroute.call_status === 'Visited'">
+                    <div class='container'><div class='cell width-40 align-right bold'>{{each.getroute.call_status}}</div></div>
                 </div>
                 <div class='container'><div class='cell width-40 align-right'></div></div>
-                <div class='container'><div class='cell width-40 align-right'>{{each.totalAmountofSELFTransaction}} ₱</div></div>
+                <div class='container'><div class='cell width-40 align-right'>{{each.getroute.total_amount_self_transaction}} ₱</div></div>
             </div>
             <div class='cell width-10 arrow-right'></div>
         </div>
